[tool.poetry]
name = "self-tracking"
version = "0.1.0"
description = ""
authors = ["David Moody <david@davidxmoody.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
calmap = "^0.0.11"
seaborn = "^0.13.2"
folium = "^0.15.1"
ipython = "^8.22.1"
setuptools = "^69.1.1"
pyarrow = "^15.0.0"
jupyterlab = "^4.1.4"
jupytext = "^1.16.1"
plotly = "^5.20.0"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
