[tool.poetry]
name = "self-tracking"
version = "0.1.0"
description = ""
authors = ["David Moody <david@davidxmoody.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.4"
pandas = "^2.2.3"
folium = "^0.19.5"
ipython = "^9.0.2"
plotly = "^6.0.1"
dash = "^3.0.2"
dash-mantine-components = "^1.1.1"
yaspin = "^3.1.0"
pandas-stubs = "^2.2.3.250308"
osmnx = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
