[tool.poetry]
name = "self-tracking"
version = "0.1.0"
description = ""
authors = ["David Moody <david@davidxmoody.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.5"
pandas = "^2.2.3"
folium = "^0.19.5"
ipython = "^9.2.0"
plotly = "^6.0.1"
dash = "^3.0.4"
dash-mantine-components = "^1.2.0"
yaspin = "^3.1.0"
pandas-stubs = "^2.2.3.250308"
osmnx = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
